<resources>
    <string name="app_name">Vocabulary Builder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="noInternet">No internet connection. Cannot load the image</string>
    <string name="waitingForImage">Waiting for the image to load.</string>
    <string name="rate_string">If you are enjoying this app, please click here to give us a rating, it will help us a lot.</string>
    <string name="congratulations">Congratulations!</string>
    <string name="proud">So proud of you!</string>
    <string name="learned_all_word">You\'ve learned all the words of this section</string>

    <string name="session_completed">Session \nCompleted!</string>

    <string name="you_dont_have_favorite">You don\'t have any favorite words</string>
    <string name="brand_name">Fortitude Learn™</string>
    <string name="advance_title">ADVANCE</string>
    <string name="intermediate_title">INTERMEDIATE</string>
    <string name="beginner_title">BEGINNER</string>

    <string name="sign_in_text">Sign-in to save your progress</string>
    <string name="wps_text">Words Per Session</string>
    <string name="rate_title">Support Us</string>
    <string name="sound_text">Sound</string>
    <string name="sound_text_detail">Turn off or on sound of the quiz sessions</string>
    <string name="theme_title">Theme</string>
    <string name="trial_ended">Trial ended</string>
    <string name="trial_ended_description">Hi, your 7-days trial has ended. You can still use this app and enjoy most of its functions. However, if you want an ad-free experience and dark mode feature, please consider upgrading. Thank you :)</string>
    <string name="purchase_title">UNLOCK YOUR\nFULL POTENTIAL!</string>
    <string name="purchase_description">Stay free of ads and save your eyes and battery with dark mode for a small one-time price.</string>
    <string name="purchase_thank_you">Thank you for your purchase. Your contribution will help us create a better app :)</string>
    <string name="setting_image">This is a button to go to settings</string>
    <string name="do_you_speak_spanish">Speak Spanish? Turn on translation</string>
    <string name="too_easy">Too easy? Turn toggle off</string>
    <string name="trial_info_description">Most of our important features are free but <b>Premium+ access</b> gives you privilege to an interrupted Ad free experience and Dark mode feature.</string>
    <string name="trial_info_title">Enjoy free Premium+ access for 7 days</string>
    <string name="credit_card_not">Credit card not required</string>
    <string name="trial_mode">Trial mode: %1$s</string>
    <string name="word_learned">%1$d words learned</string>
    <string name="sign_in">Sign in</string>
    <string name="pretrain_progress_text">PROGRESS %1$d/%2$d</string>
    <string name="new_words_learned">%1$d new words learned!</string>
    <string name="words_were_reviewed">%1$d words were reviewed</string>
    <string name="word">Word</string>
    <string name="sentence_2">Yet this young man\'s frank appraisal was none of those.Yet this young man\'s frank appraisal was none of those.</string>
    <string name="premium">premium</string>
    <string name="fortitude_icon_description">Icon of Fortitude Learn</string>
    <string name="happy_rabbit_face">Happy rabbit face</string>
    <string name="certificate_icon">Certificate icon</string>
    <string name="heart_icon">Heart icon</string>
    <string name="picture_of_woman_learning">a picture of a educated woman</string>
    <string name="cross_icon">a cross icon for most mistaken words</string>
    <string name="tick_icon">a tick mark icon for learned words</string>
    <string name="rabbit_with_egg">a happy rabbit offering you an egg</string>
    <string name="proud_rabbit">a proud rabbit who have not learned any words</string>
    <string name="trail_state_icon">Icon letting you know the status of your subscription</string>
    <string name="no_internet_image_description">a sad rabbit because there is no internet</string>
    <string name="visula_cue_image_description">A visual cue image</string>
    <string name="visula_cue_image_resolution_description">A toggle button for changing visual cue image resolution</string>
    <string name="advance">Advance</string>
    <string name="intermediate">Intermediate</string>
    <string name="beginner">Beginner</string>
    <string name="restore_purchase">Restore purchase</string>
    <string name="products">Products</string>
    <string name="most_mistaken_word">Most mistaken word</string>
    <string name="learned_words">Learned words</string>
    <string name="look_at_me_i_have_not_learned_any_words">Look at me! I have not learned any words</string>
    <string name="medium">medium</string>
    <string name="report_a_mistake">Report a mistake</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="price">Price</string>
    <string name="buy">Buy</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    
    <!-- Bottom Navigation -->
    <string name="home">Home</string>
    <string name="words">Words</string>
    <string name="learned">Learned</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>

    <string name="google_client_id" translatable="false">576057269160-7fuvcqcdidumlgtecrrcs4b0unklh85b.apps.googleusercontent.com</string>
<!--    //<string name="google_client_id">"576057269160-7fuvcqcdidumlgtecrrcs4b0unklh85b.apps.googleusercontent.com"</string>-->
<!--    <string name="client_id">"576057269160-872i8m7d8acvc4vbp1nrrqt9p42mv7dq.apps.googleusercontent.com"</string>-->

    <string name="client_id">576057269160-rrmbgscigibr5gjen64ebqr0kijpf7ci.apps.googleusercontent.com</string>
    <string name="loading_text">We are preparing the app...</string>
    <!-- Settings Screen -->
    <string name="settings_account">Account</string>
    <string name="settings_sign_out">Sign Out</string>
    <string name="settings_audio">Audio</string>
    <string name="settings_sound_effects">Sound Effects</string>
    <string name="settings_sound_effects_desc">Play sounds during training</string>
    <string name="settings_voice_pronunciation">Voice Pronunciation</string>
    <string name="settings_voice_pronunciation_desc">Download and play word pronunciations</string>
    <string name="settings_training">Training</string>
    <string name="settings_words_per_session">Words per Session</string>
    <string name="settings_repetitions_per_session">Repetitions per Session</string>
    <string name="settings_vocabulary_filters">Vocabulary Filters</string>
    <string name="settings_select_categories">Select word categories to include in training:</string>
    <string name="settings_language">Language</string>
    <string name="settings_spanish_translations">Spanish Translations</string>
    <string name="settings_espanol">Español</string>
    <string name="settings_english">English</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_other">Other</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_restore_purchases">Restore Purchases</string>
    <string name="settings_upgrade_dark_mode">Please upgrade to enjoy dark mode feature</string>
    <string name="settings_restore_unavailable">Restore is unavailable</string>
    <string name="settings_back">Back</string>
    <string name="settings_light">Light</string>
    <string name="settings_dark">Dark</string>
    <string name="settings_system">System</string>
    <string name="settings_save_changes">Save Changes</string>
    <string name="settings_saved">Settings saved</string>
    <string name="settings_discard_title">Discard changes?</string>
    <string name="settings_discard_message">You have unsaved changes. Are you sure you want to discard them?</string>
    <string name="settings_discard_confirm">Discard</string>
    <string name="settings_discard_dismiss">Keep Editing</string>
    <string-array name="settings_theme_options">
        <item>@string/settings_light</item>
        <item>@string/settings_dark</item>
        <item>@string/settings_system</item>
    </string-array>
    <string-array name="settings_session_options">
        <item>25</item>
        <item>20</item>
        <item>15</item>
        <item>10</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
    </string-array>
</resources>
