<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    
    <item
        android:id="@+id/navigation_words"
        android:icon="@drawable/ic_words"
        android:title="@string/words" />
    
    <item
        android:id="@+id/navigation_learned"
        android:icon="@drawable/ic_learned"
        android:title="@string/learned" />
    
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_icon"
        android:title="@string/favorite" />
    
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile" />
</menu>
