<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/congratulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/keyline_4"
        android:layout_marginEnd="@dimen/keyline_4"
        android:layout_marginTop="@dimen/keyline_4"
        android:text="@string/congratulations"
        style="@style/primary_text_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/completed_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_2"
        android:layout_marginLeft="@dimen/keyline_4"
        android:layout_marginRight="@dimen/keyline_4"
        android:text="@string/learned_all_word"
        android:textAlignment="center"
        style="@style/secondary_text_style_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congratulation" />

    <ImageView
        android:id="@+id/no_word_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/happy_rabbit_face"
        app:srcCompat="@drawable/beginner_no_words" />


    <mehdi.sakout.fancybuttons.FancyButton

        android:id="@+id/no_word_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="home_nomorewords"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        fancy:fb_borderColor="@color/colorPrimary"
        fancy:fb_borderWidth="2dp"
        fancy:fb_defaultColor="#ffffff"
        fancy:fb_focusColor="@color/colorPrimary"
        fancy:fb_radius="30dp"


        fancy:fb_text="Home"
        fancy:fb_textColor="@color/colorPrimary">


    </mehdi.sakout.fancybuttons.FancyButton>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:onClick="reset"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/no_word_home"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        fancy:fb_borderColor="@color/colorPrimary"
        fancy:fb_borderWidth="2dp"
        fancy:fb_defaultColor="#ffffff"
        fancy:fb_focusColor="@color/colorPrimary"
        fancy:fb_radius="30dp"
        fancy:fb_text="Reset"
        fancy:fb_textColor="@color/colorPrimary">


    </mehdi.sakout.fancybuttons.FancyButton>

    <TextView
        android:id="@+id/so_proud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/keyline_4"
        android:layout_marginStart="@dimen/keyline_4"
        android:layout_marginEnd="@dimen/keyline_4"
        android:layout_marginTop="@dimen/keyline_4"
        android:text="@string/proud"
        style="@style/third_text_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_word_image" />
</androidx.constraintlayout.widget.ConstraintLayout>