<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    tools:context="com.fortitude.shamsulkarim.ieltsfordory.ui.train.TrainFinishedActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tf_button_background">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">





            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardView5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/keyline_4"
                    android:layout_marginStart="@dimen/keyline_6"
                    android:layout_marginTop="@dimen/keyline_4"
                    android:text="@string/session_completed"
                    style="@style/primary_text_style"
                    app:layout_constraintEnd_toStartOf="@+id/imageView8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/train_finished_new_learned_word_count_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="@dimen/keyline_6"
                    android:layout_marginEnd="@dimen/keyline_4"
                    android:layout_marginTop="@dimen/keyline_1"
                    android:text="@string/new_words_learned"
                    style="@style/secondary_text_style_light"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView21" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginBottom="@dimen/keyline_4"
                    android:layout_marginEnd="@dimen/keyline_6"
                    android:layout_marginTop="@dimen/keyline_4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/certificate_icon"
                    fancy:srcCompat="@drawable/session_complete_tick_mark" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/rate_card"
                style="@style/rate_card_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/keyline_4"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/keyline_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView5">

                <androidx.constraintlayout.widget.ConstraintLayout
                    style="@style/Rate.Card.Theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/background"
                    android:theme="@style/Rate.Card.Theme">

                    <ImageView
                        android:id="@+id/rate_icon"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_marginTop="@dimen/keyline_4"
                        android:layout_marginEnd="@dimen/keyline_4"
                        android:layout_marginBottom="@dimen/keyline_4"
                        android:contentDescription="@string/heart_icon"
                        android:src="@drawable/rate_love_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/third_text_style_white"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/keyline_4"
                        android:layout_marginTop="@dimen/keyline_1"
                        android:layout_marginEnd="@dimen/keyline_4"
                        android:layout_marginBottom="@dimen/keyline_4"
                        android:text="@string/rate_string"
                        android:textColor="?attr/colorOnPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/rate_icon"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView7" />

                    <TextView
                        android:id="@+id/textView7"
                        style="@style/primary_text_style_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/keyline_4"
                        android:layout_marginTop="@dimen/keyline_4"
                        android:text="@string/rate_title"
                        android:textColor="?attr/colorOnPrimary"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>


            <ImageView
                android:id="@+id/most_mistaken_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="@dimen/keyline_6"
                android:layout_marginTop="@dimen/keyline_4"
                android:contentDescription="@string/cross_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/train_finished_recycler_view"
                fancy:srcCompat="@drawable/ic_wrong_circle" />

            <TextView
                android:id="@+id/most_mistaken_text"
                style="@style/third_word_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/most_mistaken_word"


                app:layout_constraintBottom_toBottomOf="@+id/most_mistaken_image"
                app:layout_constraintStart_toEndOf="@+id/most_mistaken_image"
                app:layout_constraintTop_toTopOf="@id/most_mistaken_image" />

            <androidx.cardview.widget.CardView
                android:id="@+id/most_mistaken_card"
                style="@style/train_finished_card_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/keyline_4"
                android:layout_marginEnd="@dimen/keyline_4"
                android:layout_marginBottom="@dimen/keyline_4"
                app:cardBackgroundColor="?attr/colorPrimarySurface"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/most_mistaken_image">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView

                        android:id="@+id/train_finished_word"
                        style="@style/third_word_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/keyline_4"
                        android:layout_marginTop="@dimen/keyline_4"
                        android:layout_marginBottom="@dimen/keyline_4"
                        android:text="@string/word"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!-- Favorite Button (Ghost Style) -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/train_finished_favorite"
                        android:layout_width="71dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:padding="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/train_finished_unlearn"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeColor="?attr/colorPrimarySurface"
                        app:strokeWidth="2dp"
                        app:backgroundTint="@android:color/transparent"
                        app:rippleColor="?attr/colorPrimary"
                        app:cornerRadius="18dp"
                        app:icon="@drawable/ic_favorite_icon"
                        app:iconTint="?attr/colorPrimarySurface"
                        app:iconGravity="textStart"
                        app:iconPadding="0dp"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="" />

                    <!-- Unlearn Button -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/train_finished_unlearn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/keyline_4"
                        android:layout_marginEnd="@dimen/keyline_4"
                        android:layout_marginBottom="@dimen/keyline_4"
                        android:elevation="3dp"
                        android:paddingStart="20dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="10dp"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeColor="?attr/background"
                        app:strokeWidth="2dp"
                        app:backgroundTint="?attr/background"
                        app:rippleColor="?attr/colorPrimary"
                        app:cornerRadius="30dp"
                        android:text="Unlearn"
                        android:textColor="@color/lowColor"
                        android:insetTop="0dp"
                        android:insetBottom="0dp" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/learned_words_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="@dimen/keyline_6"
                android:layout_marginTop="@dimen/keyline_4"
                android:contentDescription="@string/tick_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rate_card"
                fancy:srcCompat="@drawable/ic_correct_circle" />

            <TextView
                android:id="@+id/textView23"
                style="@style/third_word_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/learned_words"
                app:layout_constraintBottom_toBottomOf="@+id/learned_words_image"
                app:layout_constraintStart_toEndOf="@+id/learned_words_image"
                app:layout_constraintTop_toTopOf="@+id/learned_words_image" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/train_finished_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/keyline_4"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/keyline_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/learned_words_image" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


    <View
        android:id="@+id/tf_button_background"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/card_background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:alpha="0.2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@drawable/bottom_shadow"
        app:layout_constraintBottom_toTopOf="@+id/tf_button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/tf_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/keyline_4"
        android:layout_marginTop="@dimen/keyline_4"
        android:layout_marginBottom="@dimen/keyline_4"
        android:src="@drawable/ic_home"
        app:fab_colorNormal="?attr/colorSurface"
        app:fab_colorPressed="?attr/colorPrimary"
        app:fab_showShadow="false"
        app:layout_constraintTop_toTopOf="@id/tf_button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tf_train_again"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="@dimen/keyline_4"
        android:layout_marginEnd="@dimen/keyline_4"
        android:elevation="0dp"
        android:stateListAnimator="@null"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toTopOf="@id/tf_button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tf_home"
        app:strokeWidth="2dp"
        app:strokeColor="?attr/colorPrimary"
        app:backgroundTint="?attr/colorPrimary"
        app:rippleColor="?attr/colorPrimaryDark"
        app:cornerRadius="30dp"
        android:text="STUDY MORE"
        android:textColor="@color/primary_text_color_white"
        android:insetTop="0dp"
        android:insetBottom="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
